Adding code to the project

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+.lightTheme,
+.lightButtonTheme {
+  background-color: #fff;
+  color: #000;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.darkTheme,
+.darkButtonTheme {
+  background-color: #000;
+  color: #fff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.darkTheme,
+.lightTheme {
+  height: 350px;
+  margin-left: 50px;
+  margin-right: 50px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.darkButtonTheme:hover {
+  background-color: #ddd;
+  color: #000;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.lightButtonTheme:hover {
+  background-color: #ddd;
+  cursor: pointer;
+}
+
+.darkButtonTheme,
+.lightButtonTheme {
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #fff;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.lightButtonTheme {
+  border: 1px solid #000;
+}
+
+.themeTitleText {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-size: 60px;
 }
